2003-06-25  root  <root@gills.dancysoft.com>

	* Changed the DNS blacklisting to a rcpt-to checker so that sender
	and recipient can be logged.

	* Makefile:  chown installed files to 'root'

	* Update greylist.sql for faster setup.

	* Added greylisting feature.

	* Added rc script for redhat-style hosts.

	* Added DNS-based blacklisting.

	* Added in hooks so that administrators can easily add checks
	during the MAIL FROM and RCPT TO and DATA phases of an SMTP
	session.  The greylisting code uses these.

	* Moved some of the built-in checks that the smtp server did
	during the mail from, rcpt to and data phases into
	smtp-server-checkers.cl.  They use the newly created hooks.

2003-06-23  Ahmon Dancy  <dancy@dancy>

	* utils.cl:  Make short-host-name really return a short host name.

	* config.cl:  Removed franz-specific stuff.

2003-06-18  root  <root@gills.dancysoft.com>

	* Makefile:  Added 'install' rule.

	* deliver.cl:  Downcase local recipient name.

	* load.cl: Don't do the sendmail.dxl and sendmail.lic symlinks
	anymore.  Not necessary w/ new patches.

2003-06-18  Ahmon Dancy  <dancy@dancy>

	* maild.cl: Make use of updated with-command-line-arguments
	patches.  Process -oi option... ignores other unrecognized
	options.  Ignores -bi command line arg.

2003-06-08  root  <root@gills.dancysoft.com>

	* deliver.cl: Add the "From " separator to messages being
	delivered to programs and to files.

	* aliases.cl:  Supports wildcard aliases now.

	* checkers.cl:  Added support for external checker programs.

	* config.cl:  Removed *virtusersfile*.  Not used anymore.  Added
	*external-checker-user* variable for specifying user under which
	external checkers run.

	* deliver-smtp.cl:  Fixed check for nxdomain.

	* deliver.cl:  When delivering to program alias, use
	*program-alias-user*, not *local-delivery-user*.

	* recips.cl:  Fixed buglet.

	* virtusers.cl:  Removed.   Implemented in aliases.

2003-06-06  Ahmon Dancy  <dancy@dancy>
