@@ -1,6 +1,15 @@
-lisp=/storage1/acl/mlisp
+# $Id: Makefile,v 1.7 2003/06/25 23:03:12 layer Exp $
+
+lisp=$(shell if test -d /storage1/acl/mlisp; then \
+		echo /storage1/acl/mlisp; \
+	     else \
+		echo /backup/acl/acl62/mlisp; \
+	     fi)
 libdir=/usr/local/lib
 bindir=/usr/local/sbin
+
+foo:
+	echo $(lisp)
 
 maild/maild: *.cl
 	rm -fr maild
@@ -8,13 +17,14 @@ maild/maild: *.cl
 
 install: maild/maild
 	mkdir -p $(libdir) $(bindir)
-	rm -fr $(libdir)/maild
+	rm -fr $(libdir)/maild.old
+	-mv $(libdir)/maild $(libdir)/maild.old
 	cp -pr maild $(libdir)
-	chown root $(libdir)/*
+	chown root $(libdir)/maild/*
 	ln -sf $(libdir)/maild/maild $(bindir)/maild
 
 install-init:
-	cp maild.init /etc/init.d/maild
+	cp -p maild.init /etc/init.d/maild
 
 clean:
 	rm -f *.fasl
